--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 
   </head>
   <body>
-
+    <nav>
+      <ul>
+        <li>
+          <a href="#">HOME</a>
+        </li>
+        <li>
+          <a href="#">DESTINATIONS</a>
+        </li>
+        <li>
+          <a href="#">PLAN A TRIP</a>
+        </li>
+        <li>
+          <a href="#">CONTACT</a>
+        </li>
+        <li>
+          <a href="#">ABOUT</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
