--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
           <a href="#">HOME</a>
         </li>
         <li>
-          <a href="#">DESTINATIONS</a>
+          <a href="destinations.html">DESTINATIONS</a>
         </li>
         <li>
-          <a href="#">PLAN A TRIP</a>
+          <a href="planatrip.html">PLAN A TRIP</a>
         </li>
         <li>
-          <a href="#">CONTACT</a>
+          <a href="contact.html">CONTACT</a>
         </li>
         <li>
-          <a href="#">ABOUT</a>
+          <a href="about.html">ABOUT</a>
         </li>
       </ul>
     </nav>
