Update and rename faq.html to planatrip.html

--- a/planatrip.html
+++ b/planatrip.html
@@ -14,19 +14,16 @@
           <a href="#">HOME</a>
         </li>
         <li>
-          <a href="#">ABOUT US</a>
+          <a href="destinations.html">DESTINATIONS</a>
         </li>
         <li>
-          <a href="#">CONTACT US</a>
+          <a href="planatrip.html">PLAN A TRIP</a>
         </li>
         <li>
-          <a href="#"></a>
+          <a href="contact.html">CONTACT</a>
         </li>
         <li>
-          <form>
-            <input class="searchQuery" type="text" name="searchQuery" placeholder="Search query">
-            <input class="searchButton" type="submit" name="searchButton" value="Go!">
-          </form>
+          <a href="about.html">ABOUT</a>
         </li>
       </ul>
     </nav>
