--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,24 @@
 
   </head>
   <body>
-
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">HOME</a>
+        </li>
+        <li>
+          <a href="destinations.html">DESTINATIONS</a>
+        </li>
+        <li>
+          <a href="planatrip.html">PLAN A TRIP</a>
+        </li>
+        <li>
+          <a href="#">CONTACT</a>
+        </li>
+        <li>
+          <a href="about.html">ABOUT</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
