--- a/planatrip.html
+++ b/planatrip.html
@@ -11,13 +11,13 @@
     <nav>
       <ul>
         <li>
-          <a href="#">HOME</a>
+          <a href="index.html">HOME</a>
         </li>
         <li>
           <a href="destinations.html">DESTINATIONS</a>
         </li>
         <li>
-          <a href="planatrip.html">PLAN A TRIP</a>
+          <a href="#">PLAN A TRIP</a>
         </li>
         <li>
           <a href="contact.html">CONTACT</a>
