--- a/about.html
+++ b/about.html
@@ -1,12 +1,35 @@
 <!doctype html>
 <html>
   <head>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <title>COMP 20 - MIDTERM PROJECT - ABOUT US</title>
+    <script 
 
   </head>
   <body>
-
+    <header>
+      <h1>APOLLO TRAVEL</h1>
+    </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">HOME</a>
+        </li>
+        <li>
+          <a href="destinations.html">DESTINATIONS</a>
+        </li>
+        <li>
+          <a href="planatrip.html">PLAN A TRIP</a>
+        </li>
+        <li>
+          <a href="contact.html">CONTACT</a>
+        </li>
+        <li>
+          <a href="#">ABOUT</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
