--- a/about.html
+++ b/about.html
@@ -5,8 +5,28 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <title>COMP 20 - MIDTERM PROJECT - ABOUT US</title>
-    <script 
-
+    
+    <style>
+      nav {
+        font-family: 'Roboto Condensed', sans-serif;
+        background-color: #ec19ff;
+        padding: 15px 0;
+      }
+      nav a {
+        color: #000000;
+        font-size: 19px;
+        text-decoration: none;
+        margin: 50px;
+      }
+      nav ul {
+        list-style-type: circle;
+        list-style-position: inside
+      }
+      nav ul li {
+        display: inline-block;
+      }
+    </style>
+    
   </head>
   <body>
     <header>
